--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <!-- Start Navbar -->
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo/logo-bs-ai-2.svg" alt="Logo">
+                <img src="assets/images/logo/logo-bs-main.svg" alt="Logo">
                 </a>
                 <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -54,35 +54,19 @@
                 <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                   <ul id="nav" class="navbar-nav ms-auto">
                     <li class="nav-item">
-                      <a href="#home" class="page-scroll active"
-                        aria-label="Toggle navigation">Home</a>
-                    </li>
-                    <li class="nav-item">
                       <a href="#testimonials" class="page-scroll" aria-label="Toggle navigation">Testimonials</a>
                     </li>
                     <li class="nav-item">
                       <a href="#partnerships" aria-label="Toggle navigation">Partnerships</a>
                     </li>
                     <li class="nav-item">
-                      <a href="#description" aria-label="Toggle navigation">Description</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="#team" aria-label="Toggle navigation">Team</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="#clinicians" aria-label="Toggle navigation">Clinicians</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="#collaborations" aria-label="Toggle navigation">Collaborations</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="#action" aria-label="Toggle navigation">Call-To-Action?</a>
+                      <a href="#description" aria-label="Toggle navigation">What &amp; Why</a>
                     </li>
                   </ul>
                 </div>
                 <!-- navbar collapse -->
                 <div class="button add-list-button">
-                  <a href="http://localhost:8487/src/public/index.html" class="btn" target="_blank">Demo</a>
+                  <a href="http://localhost:8487/src/public/index.html" class="btn" target="_blank">See In Action</a>
                 </div>
               </nav>
               <!-- End Navbar -->
@@ -180,19 +164,19 @@
               <div class="col-lg-4 col-md-4 col-12">
                 <div class="single-achievement wow fadeInUp" data-wow-delay=".2s">
                   <!-- Add the logo of the first partnership -->
-                  <img src="assets/images/partners/partnership_logo_1.png" alt="Partnership 1">
+                  <img src="assets/partners/upmc.png" alt="UPMC" weight="250" height="250">
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-12">
                 <div class="single-achievement wow fadeInUp" data-wow-delay=".4s">
                   <!-- Add the logo of the second partnership -->
-                  <img src="assets/images/partners/partnership_logo_2.png" alt="Partnership 2">
+                  <img src="assets/partners/siemens.png" alt="Siemens" weight="250" height="250">
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-12">
                 <div class="single-achievement wow fadeInUp" data-wow-delay=".6s">
                   <!-- Add the logo of the third partnership -->
-                  <img src="assets/images/partners/partnership_logo_2.png" alt="Partnership 3">
+                  <img src="assets/partners/aws.png" alt="Amazon AWS" weight="250" height="250">
                 </div>
               </div>
             </div>
@@ -337,19 +321,24 @@
         </div>
         <div class="row">
           <!-- Add collaborations here -->
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-collaboration wow fadeInUp" data-wow-delay=".2s">
-              <img src="path/to/collaboration1-photo.jpg" alt="Clinician 1">
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-collaboration wow fadeInUp" data-wow-delay="0.60s">
+              <img src="assets/collaborations/hff.png" alt="HFF" weight="300" height="300">
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-collaboration wow fadeInUp" data-wow-delay=".4s">
-              <img src="path/to/collaboration2-photo.jpg" alt="Clinician 2">
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-collaboration wow fadeInUp" data-wow-delay="0.80s">
+              <img src="assets/collaborations/ipolisboa.png" alt="IPO-Lisboa" weight="300" height="300">
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-collaboration wow fadeInUp" data-wow-delay=".6s">
-              <img src="path/to/collaboration3-photo.jpg" alt="Clinician 3">
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-collaboration wow fadeInUp" data-wow-delay="1.00s">
+              <img src="assets/collaborations/chtmad.png" alt="CHTMAD" weight="300" height="300">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-collaboration wow fadeInUp" data-wow-delay="1.00s">
+              <img src="assets/collaborations/amigas.png" alt="Amigas do Peito" weight="300" height="300">
             </div>
           </div>
           <!-- Add more collaborations as needed -->
@@ -357,24 +346,6 @@
       </div>
     </section>
     <!-- End Collaborations Area -->
-    <!-- Start Call To Action Area -->
-    <section id="action" class="section call-action">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
-            <div class="cta-content">
-              <h2 class="wow fadeInUp" data-wow-delay=".2s">BreastScreeing-AI</h2>
-              <p class="wow fadeInUp" data-wow-delay=".4s">Please, purchase full version of the app.
-              </p>
-              <div class="button wow fadeInUp" data-wow-delay=".6s">
-                <a href="javascript:void(0)" class="btn">Purchase Now</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Call To Action Area -->
     <!-- Start Footer Area -->
     <footer class="footer">
       <!-- Start Footer Top -->
@@ -389,17 +360,27 @@
                   <img src="assets/images/logo/logo-bs-ai-2.svg" alt="#">
                   </a>
                 </div>
-                <p>Making the world a better place through constructing elegant hierarchies.</p>
+                <p>AI will not take your job, but will help<br/>you save more lifes instead.</p>
                 <ul class="social">
-                  <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                  <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                  <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
-                  <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
-                  <li><a href="javascript:void(0)"><i class="lni lni-youtube"></i></a></li>
-                  <li><a href="javascript:void(0)"><i class="lni lni-pinterest"></i></a></li>
+                  <li>
+                    <a href="https://www.instagram.com/breastscreeningai/" target="_blank">
+                      <i class="lni lni-instagram">
+                      </i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com/company/breastscreeningai" target="_blank">
+                      <i class="lni lni-linkedin-original">
+                      </i>
+                    </a>
+                  </li>
                 </ul>
-                <p class="copyright-text">Designed and Developed by <a href="https://uideck.com/"
-                  rel="nofollow" target="_blank">UIdeck</a></p>
+                <p class="copyright-text">Developed by 
+                  <a href="https://dev.oppr.io/" rel="nofollow" target="_blank">opprDev Team</a>
+                </p>
+                <p class="copyright-text">Proudly Powered by 
+                  <a href="https://oppr.io/" rel="nofollow" target="_blank">oppr</a>
+                </p>
               </div>
               <!-- End Single Widget -->
             </div>
@@ -410,11 +391,12 @@
                   <div class="single-footer f-link">
                     <h3>Solutions</h3>
                     <ul>
-                      <li><a href="javascript:void(0)">Marketing</a></li>
-                      <li><a href="javascript:void(0)">Analytics</a></li>
-                      <li><a href="javascript:void(0)">Commerce</a></li>
-                      <li><a href="javascript:void(0)">Insights</a></li>
-                      <li><a href="javascript:void(0)">Promotion</a></li>
+                      <li>
+                        <a href="javascript:void(0)" target="_blank">Analytics</a>
+                      </li>
+                      <li>
+                        <a href="javascript:void(0)" target="_blank">Insights</a>
+                      </li>
                     </ul>
                   </div>
                   <!-- End Single Widget -->
@@ -424,11 +406,12 @@
                   <div class="single-footer f-link">
                     <h3>Support</h3>
                     <ul>
-                      <li><a href="javascript:void(0)">Pricing</a></li>
-                      <li><a href="javascript:void(0)">Documentation</a></li>
-                      <li><a href="javascript:void(0)">Guides</a></li>
-                      <li><a href="javascript:void(0)">API Status</a></li>
-                      <li><a href="javascript:void(0)">Live Support</a></li>
+                      <li>
+                        <a href="javascript:void(0)" target="_blank">Documentation</a>
+                      </li>
+                      <li>
+                        <a href="javascript:void(0)" target="_blank">Live Support</a>
+                      </li>
                     </ul>
                   </div>
                   <!-- End Single Widget -->
@@ -438,11 +421,12 @@
                   <div class="single-footer f-link">
                     <h3>Company</h3>
                     <ul>
-                      <li><a href="javascript:void(0)">About Us</a></li>
-                      <li><a href="javascript:void(0)">Our Blog</a></li>
-                      <li><a href="javascript:void(0)">Jobs</a></li>
-                      <li><a href="javascript:void(0)">Press</a></li>
-                      <li><a href="javascript:void(0)">Contact Us</a></li>
+                      <li>
+                        <a href="https://github.com/BreastScreeningAI/meta" target="_blank">About Us</a>
+                      </li>
+                      <li>
+                        <a href="mailto:breastscreeningai@mail.com" target="_blank">Contact Us</a>
+                      </li>
                     </ul>
                   </div>
                   <!-- End Single Widget -->
@@ -452,11 +436,10 @@
                   <div class="single-footer f-link">
                     <h3>Legal</h3>
                     <ul>
-                      <li><a href="javascript:void(0)">Terms & Conditions</a></li>
-                      <li><a href="javascript:void(0)">Privacy Policy</a></li>
-                      <li><a href="javascript:void(0)">Catering Services</a></li>
-                      <li><a href="javascript:void(0)">Customer Relations</a></li>
-                      <li><a href="javascript:void(0)">Innovation</a></li>
+                      <li>
+                        <a href="javascript:void(0)" target="_blank">Terms & Conditions</a>
+                      </li>
+                      <li><a href="javascript:void(0)" target="_blank">Privacy Policy</a></li>
                     </ul>
                   </div>
                   <!-- End Single Widget -->
