--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 Leverage AI to accurately diagnose breast cancer. Eradicate the possibility of medical errors, substantially improving patient outcomes and streamlining healthcare efficiency.
               </p>
               <div class="button wow fadeInLeft" data-wow-delay=".8s">
-                <a href="#todo" class="btn"><i class="lni lni-ambulance"></i> Survivor Stories</a>
-                <a href="http://localhost:8487/src/public/index.html" class="btn btn-alt" target="_blank"><i class="lni lni-hospital"></i> Request Demo</a>
+                <a href="https://docs.google.com/forms/d/1_Q07eCTgF9r2HXgt0916c2_DMp9dJuqLTzZPoWRXEdI" class="btn" target="_blank"><i class="lni lni-ambulance"></i> I'm a Survivor</a>
+                <a href="https://docs.google.com/forms/d/19FhPnvxBzdfU6tlDu4CcV0C2I1NbJiY8uulIAk8q6As" class="btn btn-alt" target="_blank"><i class="lni lni-hospital"></i> I'm a Clinician</a>
               </div>
             </div>
           </div>
@@ -110,36 +110,36 @@
           <div class="col-12">
             <div class="section-title">
               <h3 class="wow zoomIn" data-wow-delay=".2s">Testimonials</h3>
-              <h2 class="wow fadeInUp" data-wow-delay=".4s">See What Our Customers Are Saying</h2>
-              <p class="wow fadeInUp" data-wow-delay=".6s">Read what some of our satisfied customers have to say about their experiences with us.</p>
+              <h2 class="wow fadeInUp" data-wow-delay=".4s">See What Our Users Are Saying</h2>
+              <p class="wow fadeInUp" data-wow-delay=".6s">Read what some of our satisfied users have to say about their experiences with us.</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Start Single Testimonial -->
-            <div class="single-first-section wow fadeInUp" data-wow-delay=".2s">
-              <i class="lni lni-user"></i>
-              <h3>John Doe</h3>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et quam odio. Cras in magna at sem ullamcorper dictum."</p>
+            <div class="single-first-section wow fadeInUp" data-wow-delay="0.20s">
+              <span class="user-icon-cristina"></span> <!-- Replace <i> with a <span> element -->
+              <h3>Cristina R. Fonseca</h3>
+              <p>"All types of tools are welcome in the fight against breast cancer. I believe that in conjunction with a vast database, artificial intelligence can be a valuable asset, and in cases where I have doubts, I will consult it as I consider it to be of great assistance."</p>
             </div>
             <!-- End Single Testimonial -->
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Start Single Testimonial -->
-            <div class="single-first-section wow fadeInUp" data-wow-delay=".4s">
-              <i class="lni lni-user"></i>
-              <h3>Jane Smith</h3>
-              <p>"Vivamus euismod odio quis turpis pellentesque, id rhoncus mi facilisis. Fusce id velit eget lectus egestas interdum."</p>
+            <div class="single-first-section wow fadeInUp" data-wow-delay="0.40s">
+              <span class="user-icon-abrantes"></span> <!-- Replace <i> with a <span> element -->
+              <h3>João Maria Abrantes</h3>
+              <p>"This AI solution effectively resolves uncertainties, aids problem-solving, and provides a second opinion when physicians may miss certain lesions. BreastScreening-AI will add value to the diagnostic process, contributing positively to the overall patient care."</p>
             </div>
             <!-- End Single Testimonial -->
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Start Single Testimonial -->
-            <div class="single-first-section wow fadeInUp" data-wow-delay=".6s">
-              <i class="lni lni-user"></i>
-              <h3>Michael Johnson</h3>
-              <p>"Donec pharetra, felis eu gravida dictum, nisi elit pellentesque quam, vitae semper ligula sapien vel eros."</p>
+            <div class="single-first-section wow fadeInUp" data-wow-delay="0.60s">
+              <span class="user-icon-gisela"></span> <!-- Replace <i> with a <span> element -->
+              <h3>Gisela Andrade</h3>
+              <p>"BreastScreening-AI is a problem solver and universal examination tool. It's invaluable for younger doctors, mitigating inexperience, pressure, and fatigue. Potential exhaustion after 100 exams increases error likelihood, making this AI's second opinion crucial."</p>
             </div>
             <!-- End Single Testimonial -->
           </div>
@@ -284,24 +284,133 @@
         <div class="row">
           <!-- Add clinicians here -->
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-clinician wow fadeInUp" data-wow-delay=".2s">
-              <img src="path/to/clinician1-photo.jpg" alt="Clinician 1">
-              <h4>Clinician 1</h4>
-              <p>Specialty 1</p>
+            <div class="single-clinician wow fadeInUp" data-wow-delay="0.20s">
+              <img src="assets/clinicians/costa.jpg" alt="Ana Costa">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Ana Costa</h4>
+                <p>Radiologist</p>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-clinician wow fadeInUp" data-wow-delay=".4s">
-              <img src="path/to/clinician2-photo.jpg" alt="Clinician 2">
-              <h4>Clinician 2</h4>
-              <p>Specialty 2</p>
+            <div class="single-clinician wow fadeInUp" data-wow-delay="0.40s">
+              <img src="assets/clinicians/germano.jpg" alt="Ana Germano">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Ana Germano</h4>
+                <p>Radiologist</p>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-clinician wow fadeInUp" data-wow-delay=".6s">
-              <img src="path/to/clinician3-photo.jpg" alt="Clinician 3">
-              <h4>Clinician 3</h4>
-              <p>Specialty 3</p>
+            <div class="single-clinician wow fadeInUp" data-wow-delay="0.60s">
+              <img src="assets/clinicians/aleluia.jpg" alt="Ana Costa">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Clara Aluluia</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="0.80s">
+              <img src="assets/clinicians/cristina.jpg" alt="Cristina R. Fonseca">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Cristina R. Fonseca</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="1.00s">
+              <img src="assets/clinicians/matos.jpg" alt="Fernando Matos">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Fernando Matos</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="1.20s">
+              <img src="assets/clinicians/gisela.jpg" alt="Gisela Andrade">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Gisela Andrade</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="1.40s">
+              <img src="assets/clinicians/abrantes.jpg" alt="João Abrantes">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>João Abrantes</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="1.60s">
+              <img src="assets/clinicians/alexandre.jpg" alt="João Alexandre">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>João Alexandre</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="1.80s">
+              <img src="assets/clinicians/liudmila.jpg" alt="Liudmila David">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Liudmila David</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="2.00s">
+              <img src="assets/clinicians/marques.jpg" alt="Pedro Tomás Marques">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Pedro Tomás Marques</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="2.20s">
+              <img src="assets/clinicians/santos.jpg" alt="Sofia Santos">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Sofia Santos</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="2.40s">
+              <img src="assets/clinicians/saldanha.jpg" alt="Tiago Saldanha">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Tiago Saldanha</h4>
+                <p>Radiologist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-clinician wow fadeInUp" data-wow-delay="2.60s">
+              <img src="assets/clinicians/william.jpg" alt="Willian Schmitt">
+              <br/>
+              <div style="text-align: center; padding:20px;">
+                <h4>Willian Schmitt</h4>
+                <p>Radiologist</p>
+              </div>
             </div>
           </div>
           <!-- Add more clinicians as needed -->
