[FINISH] Lading Page Except GIF

--- a/index.html
+++ b/index.html
@@ -246,24 +246,48 @@
         <div class="row">
           <!-- Add team members here -->
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay=".2s">
-              <img src="path/to/member1-photo.jpg" alt="Team Member 1">
-              <h4>Team Member 1</h4>
-              <p>Role 1</p>
+            <div class="single-team wow fadeInUp" data-wow-delay="0.20s">
+              <img src="assets/team/lee.png" alt="Kyle Lee">
+              <div style="text-align: center; padding:20px;">
+                <h4>Kyle Lee</h4>
+                <p>CMO + CFO</p>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay=".4s">
-              <img src="path/to/member2-photo.jpg" alt="Team Member 2">
-              <h4>Team Member 2</h4>
-              <p>Role 2</p>
+            <div class="single-team wow fadeInUp" data-wow-delay="0.40s">
+              <img src="assets/team/mastan.png" alt="Mastan Vejdannia">
+              <div style="text-align: center; padding:20px;">
+                <h4>Mastan Vejdannia</h4>
+                <p>CTO</p>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay=".6s">
-              <img src="path/to/member3-photo.jpg" alt="Team Member 3">
-              <h4>Team Member 3</h4>
-              <p>Role 3</p>
+            <div class="single-team wow fadeInUp" data-wow-delay="0.60s">
+              <img src="assets/team/fadiga.png" alt="André Fadiga">
+              <div style="text-align: center; padding:20px;">
+                <h4>André Fadiga</h4>
+                <p>CPO</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="0.80s">
+              <img src="assets/team/ferreira.png" alt="Livia Ferreira">
+              <div style="text-align: center; padding:20px;">
+                <h4>Livia Ferreira</h4>
+                <p>CDO</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="1.20s">
+              <img src="assets/team/calisto.png" alt="Francisco Maria Calisto">
+              <div style="text-align: center; padding:20px;">
+                <h4>Francisco Maria Calisto</h4>
+                <p>CEO</p>
+              </div>
             </div>
           </div>
           <!-- Add more team members as needed -->
