--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div class="col-lg-7 col-md-12 col-12">
             <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
-              <img src="assets/images/hero/fig112.png" alt="#">
+              <img src="assets/images/hero/header.gif" alt="#">
             </div>
           </div>
         </div>
