[ADD] Testimonials Role

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             <div class="single-first-section wow fadeInUp" data-wow-delay="0.20s">
               <span class="user-icon-cristina"></span> <!-- Replace <i> with a <span> element -->
               <h3>Cristina R. Fonseca</h3>
+              <h6>Radiologist</h6>
               <p>"All types of tools are welcome in the fight against breast cancer. I believe that in conjunction with a vast database, artificial intelligence can be a valuable asset, and in cases where I have doubts, I will consult it as I consider it to be of great assistance."</p>
             </div>
             <!-- End Single Testimonial -->
@@ -130,6 +131,7 @@
             <div class="single-first-section wow fadeInUp" data-wow-delay="0.40s">
               <span class="user-icon-abrantes"></span> <!-- Replace <i> with a <span> element -->
               <h3>João Maria Abrantes</h3>
+              <h6>Radiologist</h6>
               <p>"This AI solution effectively resolves uncertainties, aids problem-solving, and provides a second opinion when physicians may miss certain lesions. BreastScreening-AI will add value to the diagnostic process, contributing positively to the overall patient care."</p>
             </div>
             <!-- End Single Testimonial -->
@@ -139,6 +141,7 @@
             <div class="single-first-section wow fadeInUp" data-wow-delay="0.60s">
               <span class="user-icon-gisela"></span> <!-- Replace <i> with a <span> element -->
               <h3>Gisela Andrade</h3>
+              <h6>Radiologist</h6>
               <p>"BreastScreening-AI is a problem solver and universal examination tool. It's invaluable for younger doctors, mitigating inexperience, pressure, and fatigue. Potential exhaustion after 100 exams increases error likelihood, making this AI's second opinion crucial."</p>
             </div>
             <!-- End Single Testimonial -->
