--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <li class="nav-item">
                       <a href="#description" aria-label="Toggle navigation">What &amp; Why</a>
                     </li>
+                    <li class="nav-item">
+                      <a href="#call-to-action" aria-label="Toggle navigation">Newsletter</a>
+                    </li>
                   </ul>
                 </div>
                 <!-- navbar collapse -->
@@ -482,6 +485,23 @@
       </div>
     </section>
     <!-- End Collaborations Area -->
+    <!-- Start Call To Action Area -->
+    <section id="call-to-action" class="section call-action">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
+                  <div class="cta-content">
+                      <h2 class="wow fadeInUp" data-wow-delay=".2s">Want to know more <br>about us?</h2>
+                      <p class="wow fadeInUp" data-wow-delay=".4s">To get more insights about our project, please sign up our newsletter:</p>
+                      <div class="button wow fadeInUp" data-wow-delay=".6s">
+                          <a href="" class="btn" target="_blank">Newsletter</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </section>
+    <!-- End Call To Action Area -->
     <!-- Start Footer Area -->
     <footer class="footer">
       <!-- Start Footer Top -->
