[UPDATE] Icons CSS File

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
+    <link rel="stylesheet" href="assets/css/icons.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/tiny-slider.css" />
     <link rel="stylesheet" href="assets/css/glightbox.min.css" />
@@ -520,13 +520,25 @@
                 <ul class="social">
                   <li>
                     <a href="https://www.instagram.com/breastscreeningai/" target="_blank">
-                      <i class="lni lni-instagram">
+                      <i class="lni lni-instagram-original">
                       </i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.linkedin.com/company/breastscreeningai" target="_blank">
                       <i class="lni lni-linkedin-original">
+                      </i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/breastscreeningai/" target="_blank">
+                      <i class="lni lni-facebook-original">
+                      </i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.tiktok.com/@breastscreeningai" target="_blank">
+                      <i class="lni lni-tiktok">
                       </i>
                     </a>
                   </li>
