--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
   <!-- ========================= CSS here ========================= -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
+  <link rel="stylesheet" href="assets/css/icons.css" />
   <link rel="stylesheet" href="assets/css/animate.css" />
   <link rel="stylesheet" href="assets/css/tiny-slider.css" />
   <link rel="stylesheet" href="assets/css/glightbox.min.css" />
