--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta property='og:title' content='BreastScreening-AI'/>
+    <meta property='og:image' content='https://github.com/MIMBCD-UI/meta/raw/master/headers/breast_cancer_women_1000x300.png'/>
+    <meta property='og:description' content='Leverage AI to accurately diagnose breast cancer. Eradicate the possibility of medical errors, substantially improving patient outcomes and streamlining healthcare efficiency.'/>
+    <meta property='og:url' content='https://breastscreeningai.github.io/'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content='website'/>
     <title>BreastScreening-AI</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
