--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property='og:image:height' content='627' />
     <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
     <meta property="og:type" content='website'/>
+    <meta property="fb:app_id" content="1023737725417228" />
     <title>BreastScreening-AI</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
