--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="single-team wow fadeInUp" data-wow-delay="1.20s">
-              <img src="assets/clinicians/abrantes.png" alt="João Maria Abrantes">
+              <img src="assets/clinicians/abrantes.jpg" alt="João Maria Abrantes">
               <div style="text-align: center; padding:20px;">
                 <h4>João Maria Abrantes</h4>
                 <p>CMedO</p>
