[UPDATE] See In Action Button Time

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <!-- navbar collapse -->
                 <div class="button add-list-button">
-                  <a href="https://youtu.be/HDdq-__jNkY" class="btn" target="_blank">See In Action</a>
+                  <a href="https://www.youtube.com/watch?v=HDdq-__jNkY&t=113s" class="btn" target="_blank">See In Action</a>
                 </div>
               </nav>
               <!-- End Navbar -->
