--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 Leverage AI to accurately diagnose breast cancer. Eradicate the possibility of medical errors, substantially improving patient outcomes and streamlining healthcare efficiency.
               </p>
               <div class="button wow fadeInLeft" data-wow-delay=".8s">
-                <a href="https://docs.google.com/forms/d/1_Q07eCTgF9r2HXgt0916c2_DMp9dJuqLTzZPoWRXEdI" class="btn" target="_blank"><i class="lni lni-ambulance"></i> I'm a Survivor</a>
-                <a href="https://docs.google.com/forms/d/19FhPnvxBzdfU6tlDu4CcV0C2I1NbJiY8uulIAk8q6As" class="btn btn-alt" target="_blank"><i class="lni lni-hospital"></i> I'm a Clinician</a>
+                <a href="https://forms.gle/e4QFAapAGJ57tzk27" class="btn" target="_blank"><i class="lni lni-ambulance"></i> I'm a Survivor</a>
+                <a href="https://forms.gle/AhCE2wx8Az7pqBXAA" class="btn btn-alt" target="_blank"><i class="lni lni-hospital"></i> I'm a Clinician</a>
               </div>
             </div>
           </div>
