[ADD] Newsletter URL

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                       <h2 class="wow fadeInUp" data-wow-delay=".2s">Want to know more <br>about us?</h2>
                       <p class="wow fadeInUp" data-wow-delay=".4s">To get more insights about our project, please sign up our newsletter:</p>
                       <div class="button wow fadeInUp" data-wow-delay=".6s">
-                          <a href="" class="btn" target="_blank">Newsletter</a>
+                          <a href="https://breastscreeningai.substack.com/" class="btn" target="_blank">Newsletter</a>
                       </div>
                   </div>
               </div>
