[ADD] Amplitude Script

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <link rel="stylesheet" href="assets/css/tiny-slider.css" />
     <link rel="stylesheet" href="assets/css/glightbox.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <!-- ===================== JS Trackers here ===================== -->
+    <script src="https://cdn.eu.amplitude.com/script/eaac4fb43ff4bdd2be2af4ce7b010af.js"></script>
+    <script>
+      window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('eaac4fb43ff4bdd2be2af4ce7b010af', {"fetchRemoteConfig":true,"serverZone":"EU","autocapture":true});
+    </script>
+    <!-- ===================== JS Trackers end ====================== -->
   </head>
   <body>
     <!--[if lte IE 9]>
