--- a/index.html
+++ b/index.html
@@ -260,48 +260,12 @@
         <div class="row">
           <div class="col-12">
             <div class="section-title">
-              <h2 class="wow fadeInUp" data-wow-delay=".2s">Our Team</h2>
+              <h2 class="wow fadeInUp" data-wow-delay=".2s">Our Business Team</h2>
             </div>
           </div>
         </div>
         <div class="row">
           <!-- Add team members here -->
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay="0.20s">
-              <img src="assets/team/lee.png" alt="Kyle Lee">
-              <div style="text-align: center; padding:20px;">
-                <h4>Kyle Lee</h4>
-                <p>CMO + CFO</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay="0.40s">
-              <img src="assets/team/mastan.png" alt="Mastan Vejdannia">
-              <div style="text-align: center; padding:20px;">
-                <h4>Mastan Vejdannia</h4>
-                <p>CTO</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay="0.60s">
-              <img src="assets/team/fadiga.png" alt="André Fadiga">
-              <div style="text-align: center; padding:20px;">
-                <h4>André Fadiga</h4>
-                <p>CPO</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12">
-            <div class="single-team wow fadeInUp" data-wow-delay="0.80s">
-              <img src="assets/team/ferreira.png" alt="Livia Ferreira">
-              <div style="text-align: center; padding:20px;">
-                <h4>Livia Ferreira</h4>
-                <p>CDO</p>
-              </div>
-            </div>
-          </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="single-team wow fadeInUp" data-wow-delay="1.20s">
               <img src="assets/clinicians/abrantes.jpg" alt="João Maria Abrantes">
@@ -325,6 +289,50 @@
       </div>
     </section>
     <!-- End Team Area -->
+    <!-- Start Research Team Area -->
+    <section id="research" class="research section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title">
+              <h2 class="wow fadeInUp" data-wow-delay=".2s">Our Research Team</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <!-- Add team members here -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="1.20s">
+              <img src="assets/research/santiago.jpg" alt="Carlos Santiago">
+              <div style="text-align: center; padding:20px;">
+                <h4>Carlos Santiago</h4>
+                <p>Lead AI</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="1.20s">
+              <img src="assets/research/nascimento.jpg" alt="Jacinto Nascimento">
+              <div style="text-align: center; padding:20px;">
+                <h4>Jacinto Nascimento</h4>
+                <p>Computer Vision Advisor</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="1.20s">
+              <img src="assets/research/nunes.jpg" alt="Nuno Nunes">
+              <div style="text-align: center; padding:20px;">
+                <h4>Nuno Nunes</h4>
+                <p>User Research Advisor</p>
+              </div>
+            </div>
+          </div>
+          <!-- Add more team members as needed -->
+        </div>
+      </div>
+    </section>
+    <!-- End Research Team Area -->
     <!-- Start Clinicians Area -->
     <section id="clinicians" class="clinicians section">
       <div class="container">
@@ -472,6 +480,59 @@
       </div>
     </section>
     <!-- End Clinicians Area -->
+    <!-- Start Former Team Area -->
+    <section id="former" class="former section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title">
+              <h2 class="wow fadeInUp" data-wow-delay=".2s">Former Business Team</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <!-- Add team members here -->
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="0.20s">
+              <img src="assets/team/lee.png" alt="Kyle Lee">
+              <div style="text-align: center; padding:20px;">
+                <h4>Kyle Lee</h4>
+                <p>CFO</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="0.40s">
+              <img src="assets/team/mastan.png" alt="Mastan Vejdannia">
+              <div style="text-align: center; padding:20px;">
+                <h4>Mastan Vejdannia</h4>
+                <p>CTO</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="0.60s">
+              <img src="assets/team/fadiga.png" alt="André Fadiga">
+              <div style="text-align: center; padding:20px;">
+                <h4>André Fadiga</h4>
+                <p>COO</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-12">
+            <div class="single-team wow fadeInUp" data-wow-delay="0.80s">
+              <img src="assets/team/ferreira.png" alt="Livia Ferreira">
+              <div style="text-align: center; padding:20px;">
+                <h4>Livia Ferreira</h4>
+                <p>CMO</p>
+              </div>
+            </div>
+          </div>
+          <!-- Add more team members as needed -->
+        </div>
+      </div>
+    </section>
+    <!-- End Former Team Area -->
     <!-- Start Collaborations Area -->
     <section id="collaborations" class="collaborations section">
       <div class="container">
