--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
       </div>
     </section>
     <!-- End Hero Area -->
+    <!-- Start Recognitions Area -->
+    <section id="recognition" class="section">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-lg-6">
+            <a href="https://www.f6s.com/breastscreeningai" target="_blank">
+              <img src="assets/recognitions/f6s.png" alt="F6S Top 12 AI Startup" style="max-width: 100%;" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Recognitions Area -->
     <!-- Start Testimonials Area -->
     <section id="testimonials" class="first-section section">
       <div class="container">
